--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "pg": "^7.12.0",
     "url-regex": "^5.0.0",
     "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
